--- a/index.html
+++ b/index.html
@@ -578,12 +578,17 @@
                     Thanh Tâm </h2>
             </div>
             <div class="time" data-aos="fade-up" data-aos-duration="3000">
+            
+            <h2 style="font-weight: 500;font-size: 20px;" class="invitation_day">THƯ MỜI TIỆC CƯỚI</h2>
+            <h2 style="font-weight: 500;font-size: 20px;" class="invitation_day">THỨ 2 - 09H30</h2>
                 <span class="invitation_day">14</span>
                 .
                 <span class="invitation_month">7</span>
                 .
                 <span class="invitation_year">2025</span>
             </div>
+
+           
 
         </div>
     </section>
@@ -676,8 +681,8 @@
                         </a>
                     </div>
                                     <div data-aos="fade-up" data-aos-duration="1000" class="album-item">
-                        <a data-fancybox="gallery" href="images/z4Rj0VYLIt0w0uaFNCP3opdFHKSwsJYYFqjuDPvt.jpg">
-                            <img src="images/z4Rj0VYLIt0w0uaFNCP3opdFHKSwsJYYFqjuDPvt.jpg" alt="">
+                        <a data-fancybox="gallery" href="images/1clkAEW92VeUiJrGGNEotjLxH3WJCDOWnx4OhzRt.jpg">
+                            <img src="images/1clkAEW92VeUiJrGGNEotjLxH3WJCDOWnx4OhzRt.jpg" alt="">
                         </a>
                     </div>
                                     <div data-aos="fade-up" data-aos-duration="1000" class="album-item">
@@ -987,7 +992,7 @@
     <!-- THANK YOU -->
     <section id="thankyou" class="section-thankyou bg_overlay uk-position-z-index">
         <div class="uk-overlay uk-overlay-primary uk-position-cover"> </div>
-        <img src="images/1clkAEW92VeUiJrGGNEotjLxH3WJCDOWnx4OhzRt.jpg" alt="" class="thankyou-bg thankyou_img" style="object-position:">
+        <img src="images/thanks.jpg" alt="" class="thankyou-bg thankyou_img" style="object-position:">
         <div class="thankyou-body container uk-position-relative uk-position-z-index">
             <h2 class="script-font uk-heading-medium uk-text-center text-white">Thank you!</h2>
             <span>Sự hiện diện của mọi người là niềm vui và vinh hạnh cho gia đình</span>
