--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                             <h3 class="invitation-title" style="font-size:40px">
                                 Tiệc Nhà Gái</h3>
                             <h3 class="" style="font-size: 18px;font-weight: bold;">Tại:
-                                Thôn Tiên Lữ - Dân Hoà - Thanh Oai - HN</h3>
+                                Nhà Văn Hoá Mới Thôn Tiên Lữ - Dân Hoà - Thanh Oai - HN</h3>
                             <p style="font-size: 17px;font-weight: 500;"> Vào lúc <b style="font-size:20px">09:30</b> </p>
                             <p style="font-size: 17px;">                                Thứ Hai, Ngày <b style="font-size:20px">14-7-2025</b>
                             </p>
